mychart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-restrict-access
  namespace: qnempont
spec:
  podSelector:
    matchLabels:
      app: mongodb  # Cible uniquement les pods MongoDB
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webdb  # Autorise seulement les pods webdb
        - podSelector:
            matchLabels:
              app: webnodb  # Autorise seulement les pods webnodb
      ports:
        - protocol: TCP
          port: 27017  # Port MongoDB
